manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-basic
  name: blue-whale
  labels:
    app: blue-whale
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue-whale
  template:
    metadata:
      labels:
        app: blue-whale
    spec:
      containers:
        - name: blue-whale
          image: nexploretestdeploy.azurecr.io/blue-whale:dev
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-basic
  name: purple-whale
  labels:
    app: purple-whale
spec:
  replicas: 3
  selector:
    matchLabels:
      app: purple-whale
  template:
    metadata:
      labels:
        app: purple-whale
    spec:
      containers:
        - name: purple-whale
          image: hcwxd/purple-whale
          ports:
            - containerPort: 3000
